--- a/app/src/main/res/layout/activity_section_d_form3.xml
+++ b/app/src/main/res/layout/activity_section_d_form3.xml
@@ -1041,38 +1041,30 @@
 
             </LinearLayout>
 
+
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
                 android:id="@+id/fldGrpbtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="32dp">
+                style="@style/hlinearlayout"
+                android:layout_margin="5dp">
 
                 <Button
                     android:id="@+id/btnNext"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
-                    android:text="@string/nextSection"
-                    android:textColor="@color/white"
-                    android:textSize="24sp" />
+                    android:text="@string/nextSection" />
 
                 <Button
                     android:id="@+id/btnEnd"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/endForm"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    android:text="@string/endForm" />
 
             </LinearLayout>
 
