--- a/app/src/main/res/layout/activity_section_f_form3.xml
+++ b/app/src/main/res/layout/activity_section_f_form3.xml
@@ -18,7 +18,7 @@
 
             <LinearLayout
                 android:id="@+id/fldGrpSecF02"
-                style="@style/linearlayout_view_wt_bound">
+                style="@style/vlinearlayout">
 
                 <!-- kf3f01-->
                 <android.support.v7.widget.CardView
@@ -32,22 +32,22 @@
                             android:text="@string/kf3f01" />
 
                         <LinearLayout
-                            style="@style/linearlayout_view_wt_bound"
+                            style="@style/vlinearlayout"
                             android:tag="0">
 
                             <CheckBox
                                 android:id="@+id/kf3f01a"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f01a" />
 
                             <CheckBox
                                 android:id="@+id/kf3f01b"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f01b" />
 
                             <CheckBox
                                 android:id="@+id/kf3f01c"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f01c" />
 
                         </LinearLayout>
@@ -68,43 +68,43 @@
                             android:text="@string/kf3f02" />
 
                         <LinearLayout
-                            style="@style/linearlayout_view_wt_bound"
+                            style="@style/vlinearlayout"
                             android:tag="0">
 
                             <CheckBox
                                 android:id="@+id/kf3f02a"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f02a" />
 
                             <CheckBox
                                 android:id="@+id/kf3f02b"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f02b" />
 
                             <CheckBox
                                 android:id="@+id/kf3f02c"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f02c" />
 
                             <CheckBox
                                 android:id="@+id/kf3f02d"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f02d" />
 
                             <CheckBox
                                 android:id="@+id/kf3f02e"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f02e" />
 
                             <CheckBox
                                 android:id="@+id/kf3f0296"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/other" />
 
                             <EditText
                                 android:id="@+id/kf3f0296x"
-                                style="@style/EditText"
-                                android:hint="@string/other"
+                                style="@style/EditTextAlpha"
+                                android:hint="@string/specify"
                                 android:tag="kf3f0296"
                                 android:text='@{kf3f0296.checked ? kf3f0296x.getText().toString : "" }'
                                 android:visibility='@{kf3f0296.checked ? View.VISIBLE : View.GONE }' />
@@ -128,16 +128,21 @@
 
                         <RadioGroup
                             android:id="@+id/kf3f03"
-                            style="@style/radiogroups">
+                            style="@style/radiogroups"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/kf3f03a"
                                 style="@style/radiobuttons"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:text="@string/yes" />
 
                             <RadioButton
                                 android:id="@+id/kf3f03b"
                                 style="@style/radiobuttons"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:text="@string/no" />
 
                         </RadioGroup>
@@ -160,38 +165,38 @@
 
                         <LinearLayout
                             android:id="@+id/fldGrpLLkf3f04"
-                            style="@style/linearlayout_view_wt_bound"
+                            style="@style/vlinearlayout"
                             android:tag="0">
 
                             <CheckBox
                                 android:id="@+id/kf3f04a"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f04a" />
 
                             <CheckBox
                                 android:id="@+id/kf3f04b"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f04b" />
 
                             <CheckBox
                                 android:id="@+id/kf3f04c"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f04c" />
 
                             <CheckBox
                                 android:id="@+id/kf3f04d"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f04d" />
 
                             <CheckBox
                                 android:id="@+id/kf3f0496"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/other" />
 
                             <EditText
                                 android:id="@+id/kf3f0496x"
-                                style="@style/EditText"
-                                android:hint="@string/other"
+                                style="@style/EditTextAlpha"
+                                android:hint="@string/specify"
                                 android:tag="kf3f0496"
                                 android:text='@{kf3f0496.checked ? kf3f0496x.getText().toString : "" }'
                                 android:visibility='@{kf3f0496.checked ? View.VISIBLE : View.GONE }' />
@@ -214,33 +219,33 @@
                             android:text="@string/kf3f05" />
 
                         <LinearLayout
-                            style="@style/linearlayout_view_wt_bound"
+                            style="@style/vlinearlayout"
                             android:tag="0">
 
                             <CheckBox
                                 android:id="@+id/kf3f05a"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f05a" />
 
                             <CheckBox
                                 android:id="@+id/kf3f05b"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f05b" />
 
                             <CheckBox
                                 android:id="@+id/kf3f05c"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/kf3f05c" />
 
                             <CheckBox
                                 android:id="@+id/kf3f0596"
-                                style="@style/i_checkbox"
+                                style="@style/checkbox"
                                 android:text="@string/other" />
 
                             <EditText
                                 android:id="@+id/kf3f0596x"
-                                style="@style/EditText"
-                                android:hint="@string/other"
+                                style="@style/EditTextAlpha"
+                                android:hint="@string/specify"
                                 android:tag="kf3f0596"
                                 android:text='@{kf3f0596.checked ? kf3f0596x.getText().toString : "" }'
                                 android:visibility='@{kf3f0596.checked ? View.VISIBLE : View.GONE }' />
@@ -264,16 +269,21 @@
 
                         <RadioGroup
                             android:id="@+id/kf3f06"
-                            style="@style/radiogroups">
+                            style="@style/radiogroups"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/kf3f06a"
                                 style="@style/radiobuttons"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:text="@string/yes" />
 
                             <RadioButton
                                 android:id="@+id/kf3f06b"
                                 style="@style/radiobuttons"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:text="@string/no" />
 
                         </RadioGroup>
@@ -284,38 +294,30 @@
 
             </LinearLayout>
 
+
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
                 android:id="@+id/fldGrpbtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="32dp">
+                style="@style/hlinearlayout"
+                android:layout_margin="5dp">
 
                 <Button
                     android:id="@+id/btnNext"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
-                    android:text="@string/nextSection"
-                    android:textColor="@color/white"
-                    android:textSize="24sp" />
+                    android:text="@string/nextSection" />
 
                 <Button
                     android:id="@+id/btnEnd"
+                    style="@style/buttons"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/endForm"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    android:text="@string/endForm" />
 
             </LinearLayout>
 
