--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -87,15 +87,14 @@
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout style="@style/hlinearlayout">
 
-            <Button
-                android:id="@+id/btn_End"
-                style="@style/buttons"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:background="#1ed61e"
-                android:text="@string/end_interview"
-                android:onClick="@{() -> callback.BtnEnd()}"
-                android:textColor="@color/red" />
+                <Button
+                    android:id="@+id/btnEnd"
+                    style="@style/buttons"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light"
+                    android:onClick="@{() -> callback.BtnEnd()}"
+                    android:text="@string/endForm" />
 
             </LinearLayout>
 
