--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -88,6 +88,21 @@
         <item name="android:elevation">1dp</item>
     </style>
 
+    <!-- SAJID Textview  -->
+    <style name="textviewshh">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:background">@color/colorPrimaryBeta</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:drawable">@drawable/textview_background_grad1</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:elevation">1dp</item>
+    </style>
+
     <!-- SAJID Textviewh  -->
     <style name="textviewsh">
         <item name="android:layout_width">match_parent</item>
